tests/negative/gold/identifier_test.gold
tests/negative/identifier_test.toit:6:6: error: Unexpected <illegal>
  foo$bar := 499
     ^
tests/negative/identifier_test.toit:6:3: error: Unresolved identifier: 'foo'
  foo$bar := 499
  ^~~
Compilation failed.
